# sqlce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  release.yml  test.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt
bindings/python/src/: module.cpp  value_convert.cpp
bindings/src/: module.cpp  value_convert.hpp
bindings/wasm/: CMakeLists.txt  wasm_bindings.cpp
core/: CMakeLists.txt  main.cpp
core/app/: main.cpp
core/include/sdf/application/: ColumnSchema.hpp  SdfDatabase.hpp  SqlceDatabase.hpp  TableRowRange.hpp
core/include/sdf/domain/: ColumnDef.hpp  ColumnType.hpp  ColumnValue.hpp  DateTimeValue.hpp  EncryptionMode.hpp  FormatVersion.hpp  Guid.hpp  ILazyLobSource.hpp  IPageCipher.hpp  LazyLob.hpp  PageLayout.hpp  PageSize.hpp  Row.hpp  TableDef.hpp  TextDecoder.hpp
core/include/sdf/domain/interfaces/: IPageCipher.hpp
core/include/sdf/infrastructure/: AesCbc.hpp  BinaryReader.hpp  FileStorage.hpp  PageChecksum.hpp  PageView.hpp  Sha1.hpp  Sha1KeyDerivation.hpp  Sha256.hpp  Sha512.hpp  TripleDesCbc.hpp
core/include/sdf/parsing/: CatalogPageScanner.hpp  CatalogRow.hpp  CatalogRowDecoder.hpp  CatalogSchema.hpp  ICatalogPageScanner.hpp  ILobChainRegistry.hpp  LobChainRegistry.hpp  PageView.hpp  RowDecoder.hpp  RowFragmentReassembler.hpp  SdfDatabaseComponents.hpp  SdfFormat.hpp  SdfPageCipher.hpp  TableCatalogBuilder.hpp
core/include/sdf/parsing/interfaces/: ICatalogPageScanner.hpp  ICatalogRowDecoder.hpp  ILobChainRegistry.hpp  IRowDecoder.hpp  IRowFragmentReassembler.hpp  ITableCatalogBuilder.hpp
core/src/application/: SdfDatabase.cpp  SqlceDatabase.cpp  TableRowRange.cpp
core/src/domain/: ColumnDef.cpp  ColumnType.cpp  ColumnValue.cpp  DateTimeValue.cpp  LazyLob.cpp  TableDef.cpp  TextDecoder.cpp
core/src/infrastructure/: AesCbc.cpp  BinaryReader.cpp  FileStorage.cpp  PageChecksum.cpp  PageView.cpp  Sha1.cpp  Sha1KeyDerivation.cpp  Sha256.cpp  Sha512.cpp  TripleDesCbc.cpp
core/src/parsing/: CatalogPageScanner.cpp  CatalogRow.cpp  CatalogRowDecoder.cpp  CatalogSchema.cpp  LobChainRegistry.cpp  PageView.cpp  RowDecoder.cpp  RowFragmentReassembler.cpp  SdfDatabaseComponents.cpp  SdfPageCipher.cpp  TableCatalogBuilder.cpp  TextDecoder.cpp
core/tests/: CMakeLists.txt  count_test.cpp
cpp/: CMakeLists.txt
cpp/app/: main.cpp
cpp/include/sdf/domain/: ColumnDef.hpp  ColumnType.hpp  ColumnValue.hpp  DateTimeValue.hpp  IPageStorage.hpp  NumericValue.hpp  Row.hpp  TableDef.hpp
cpp/include/sdf/infrastructure/: PageView.hpp
cpp/include/sdf/parsing/: CatalogPageScanner.hpp  CatalogRow.hpp  CatalogRowDecoder.hpp  ILobChainRegistry.hpp  ITableCatalogBuilder.hpp  LobChainRegistry.hpp  RowDecoder.hpp  TextDecoder.hpp
cpp/src/domain/: ColumnValue.cpp  DateTimeValue.cpp  Guid.cpp  NumericValue.cpp  Row.cpp
cpp/src/infrastructure/: FileStorage.cpp
cpp/src/parsing/: CatalogPageScanner.cpp  CatalogRowDecoder.cpp  LobChainRegistry.cpp  RowDecoder.cpp  TableCatalogBuilder.cpp
cpp/tests/: CMakeLists.txt  count_test.cpp
demo/: CMakeLists.txt
demo/web/: app.css  app.js  i18n.js  index.html
demo/web/i18n/: en.json  ru.json
demo/web/src/: csv.js  main.js  sqlce_db.js  state.js  status.js  table.js
docs/: CONVENTIONS.md  build.txt
docs/4.0/ru/: 00-overview.md  01-rows.md  02-lob.md  03-column-types.md  04-catalog.md  05-limitations.md
docs/4.0/ru/catalog/: 00-schema.md  01-row-layout.md  02-classification.md  03-status.md
docs/en/: cpp.md  python.md
docs/ru/: RuReadme.md  cpp.md  python.md
python/sdf/: __init__.py  __init__.pyi  _sdf_native.pyi
python/sdf_parser/: __init__.py
python/sqlce/: __init__.py  __init__.pyi  _sdf_native.pyi  _sqlce_native.pyi  view.py
research/: sdf_d1.py  sdf_d2.py  sdf_d3.py  sdf_d4.py  sdf_reader.py
research/catalog_parse/: sdf_pages.py  syscatalog.py
sdf_parser/: __init__.pyi
tests/: conftest.py  edge_case_tables.py  sample_tables.py  sdf_factory.py  table_spec.py  test_sdf40_edge_cases.py  test_sdf40_encrypted_engine_default.py  test_sdf40_encrypted_platform_default.py  test_sdf40_get_encryption_mode.py  test_sdf40_plain.py  test_sdf_column_ordinal_history.py  test_sdf_compact.py  test_sdf_edge_cases.py  test_sdf_export_decrypted.py  test_sdf_get_encryption_mode.py  test_sdf_get_format_version.py  test_sdf_lazy_iteration.py  test_sdf_plain.py  test_sdf_scenarios.py
tests/utils/: scenarios.py  sdf_factory.py  sqlce_runtime.py  table_spec.py
