[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "sdf_parser"
version = "0.1.0"
description = "Cross-platform lib for reading SQL Server CE (.sdf)"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.args = ["-DSDF_BUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/sdf_parser"]
