[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "sqlce"
version = "0.1.2"
description = "Cross-platform lib for reading SQL Server CE (.sdf)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "boykopovar", email = "boykopovar@gmail.com" }
]
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/boykopovar/sqlce"
Issues = "https://github.com/boykopovar/sqlce/issues"

[tool.scikit-build]
cmake.args = ["-DSDF_BUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/sqlce"]

[tool.cibuildwheel]
build = [
    "cp38-*",
    "cp39-*",
    "cp310-*",
    "cp311-*",
    "cp312-*",
    "cp313-*",
]
skip = ["*-musllinux*", "*-manylinux_i686", "pp*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[project.optional-dependencies]
dev = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
    "build",
    "twine",
    "pytest",
    "pytest-cov",
    "pythonnet"
]

[tool.pytest.ini_options]
addopts = "--cov=sqlce --cov-report=term-missing"
testpaths = ["tests"]
